resolvendo o problema do pylint(import-error)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,10 @@
 {
     "python.linting.pylintEnabled": true,
-    "python.linting.enabled": true
+    "python.linting.enabled": true,
+    "python.linting.pylintArgs": [
+        "--disable=W0312",
+        "--load-plugins=pylint_django",
+        "--django-settings-module=<mainapp>.settings",
+ ]
+
 }
